Issue #2835016: Updated [Varbase 8.4.x] profile: Updated [Varbase media] feature: Optimized the WYSIWYG entity embed, with basic figure.align-center, figure.align-right, figure.align-left

--- a/modules/varbase_features/varbase_media/css/varbase_media.common.css
+++ b/modules/varbase_features/varbase_media/css/varbase_media.common.css
@@ -5,9 +5,22 @@
  /**
   * Alignment classes for embedded entities.
   */
-.embedded-entity.align-center * {
+.embedded-entity.align-center *,
+figure.align-center * {
     display: block;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+}
+
+.embedded-entity.align-right,
+figure.align-right {
+  margin: 0 0 8px 8px;
+  text-align: center;
+}
+
+.embedded-entity.align-left,
+figure.align-left {
+  margin: 0 8px 8px 0;
+  text-align: center;
 }
