--- a/modules/varbase_features/varbase_media/css/varbase_media.common_logged.css
+++ b/modules/varbase_features/varbase_media/css/varbase_media.common_logged.css
@@ -2,26 +2,32 @@
  * Varbase media common logged in users style.
  */
 
-.entity-select-dialog #entity-embed-dialog-form .form-type-radio {
+.entity-select-dialog #entity-embed-dialog-form .form-type-radio,
+.editor-image-dialog #editor-image-dialog-form .form-type-radio  {
   display: block;
 }
 
-.entity-select-dialog #entity-embed-dialog-form .form-type-radio label:after {
+.entity-select-dialog #entity-embed-dialog-form .form-type-radio label:after,
+.editor-image-dialog #editor-image-dialog-form .form-type-radio label:after{
   content: "";
 }
 
 .entity-select-dialog #entity-embed-dialog-form .radio input[type="radio"],
-.entity-select-dialog #entity-embed-dialog-form .checkbox input[type="checkbox"] {
+.entity-select-dialog #entity-embed-dialog-form .checkbox input[type="checkbox"],
+.editor-image-dialog #editor-image-dialog-form .radio input[type="radio"],
+.editor-image-dialog #editor-image-dialog-form .checkbox input[type="checkbox"] {
   margin-right: 5px;
 }
 
-.entity-select-dialog #entity-embed-dialog-form .input-group .select-wrapper:first-child .form-control:first-child {
+.entity-select-dialog #entity-embed-dialog-form .input-group .select-wrapper:first-child .form-control:first-child,
+.editor-image-dialog #editor-image-dialog-form .input-group .select-wrapper:first-child .form-control:first-child{
   border-bottom-left-radius: 4px;
   border-top-left-radius: 4px;
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
 }
 
-.entity-select-dialog #entity-embed-dialog-form .form-item-attributes-data-entity-embed-display .input-group-addon {
+.entity-select-dialog #entity-embed-dialog-form .form-item-attributes-data-entity-embed-display .input-group-addon,
+.editor-image-dialog #editor-image-dialog-form .form-item-attributes-data-entity-embed-display .input-group-addon{
   display: none;
 }
